--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Title -->
-    <title>Jeux Olympiques Paris 2024</title>
+    <title>JO Paris 2024</title>
   </head>
   <body>
     <noscript>Activez JavaScript pour utiliser cette application.</noscript>
